# freertos-esp32-sys

./: .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE.md  README.md  build.rs  build_freertos.rs  generate_bindings.sh  wrapper.h
dep/xtensa/: README.md
port/: FreeRTOSConfig.h  README.md  shim.c
port/esp32/: port.c  portasm.S  portmacro.h  porttrace.h  xt_asm_utils.h  xtensa_api.h  xtensa_config.h  xtensa_context.S  xtensa_context.h  xtensa_init.c  xtensa_loadstore_handler.S  xtensa_rtos.h  xtensa_timer.h  xtensa_vectors.S
src/: backtrace.rs  bindings.rs  glue.rs  lib.rs  raw.rs
