[package]
name = "freertos-esp32-sys"
version = "0.1.0"
edition = "2018"
authors = ["Dominik Gschwind <dominik.gschwind99@gmail.com>"]
license = "MIT"

[dependencies]

[features]
default = ["use-rust-alloc"]

use-rust-alloc = []

[build-dependencies]
walkdir = "2.3.2"
cc = "1.0.68"
script-utils = { version = "*", git = "https://github.com/N3xed/script-utils.git" }
