[package]
name = "freertos-esp32-sys"
version = "0.1.0"
edition = "2018"
authors = ["Dominik Gschwind <dominik.gschwind99@gmail.com>"]
license = "MIT or Apache-2.0"

[dependencies]
chlorine = "1.0"

[features]
default = ["use-rust-alloc"]

use-rust-alloc = []

[build-dependencies]
walkdir = "2.3.2"
cc = "1.0.68"
anyhow = "1.0.41"